--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,10 +11,13 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
 
+
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
+.bg_container{
 
+}
 }
 
 @media (max-width: 575px) {
